# raindrops

./: .ammanrc.js  .gitignore  .prettierignore  .yarnrc  Makefile  README  README.md  namespace-cli-todo.md  package.json  rustfmt.toml  turbo.json
.github/workflows/: pull-request.yml  raindrops-ci.yml
js/: package.json
js/cli/: .eslintrc.json  .prettierignore  README.md  package.json  tsconfig.json
js/cli/src/: boot_up.ts  item.ts  item_collection_creator.ts  matches.ts  namespace.ts  player.ts  shadow_utils.ts  staking.ts  upload.ts  utils.ts
js/example-configs/: activateItem.json  createFreeItem.json  createItem.json  createMatch.json  initializeNamespace.json  itemClass.json  updateNamespace.json
js/example-configs/item/: createItem.json
js/example-configs/namespace/: updateNamespace.json
js/idl/: namespace.ts
js/lib/: .eslintrc.json  .prettierignore  README.md  jest.config.js  package.json  tsconfig.json
js/lib/src/: main.ts
js/src/: main.ts  tsconfig.json
js/src/cli/: item.ts  matches.ts  namespace.ts  staking.ts
js/src/constants/: item.ts  namespace.ts  player.ts  programIds.ts  staking.ts
js/src/contract/: common.ts  item.ts  matches.ts  namespace.ts  player.ts  staking.ts
js/src/instructions/: item.ts  (+3 more)
rust/: Anchor.toml  Cargo.toml  package.json
rust/avatar/: Cargo.toml
rust/avatar/src/: lib.rs
rust/avatar/src/instructions/: add_payment_mint_to_payment_method.rs  add_trait_conflicts.rs  begin_trait_swap_update.rs  begin_trait_update.rs  begin_variant_update.rs  burn_payment.rs  burn_payment_tree.rs  cancel_update.rs  create_avatar.rs  create_avatar_class.rs  create_payment_method.rs  create_player_class.rs  create_trait.rs  equip_trait.rs  equip_trait_authority.rs  migrate_avatar_account.rs  migrate_avatar_class_account.rs  mod.rs  remove_trait.rs  remove_trait_authority.rs  swap_trait.rs  transfer_payment.rs  transfer_payment_tree.rs  update_attribute_metadata.rs  update_class_variant_authority.rs  update_class_variant_metadata.rs  update_trait.rs  update_trait_variant_authority.rs  update_trait_variant_metadata.rs  update_variant.rs  verify_payment_mint.rs  verify_payment_mint_test.rs
rust/avatar/src/state/: accounts.rs  data.rs  errors.rs  mod.rs
rust/avatar/src/utils/: mod.rs
rust/game/: Cargo.toml
rust/item/: Cargo.toml
rust/item-cpi/: Cargo.toml  item.json
rust/item/src/: lib.rs  utils.rs
rust/item/src/instructions/: add_build_material.rs  add_build_material_pnft.rs  add_build_material_spl.rs  add_component_to_build.rs  add_ingredient_pnft.rs  add_ingredient_spl.rs  add_item_to_item_class.rs  add_pack_to_item_class.rs  add_payment.rs  add_schema.rs  apply_build_effect.rs  close_build.rs  complete_build.rs  complete_build_deterministic.rs  complete_build_item.rs  complete_build_pack.rs  complete_build_preset_only.rs  complete_build_tree.rs  consume_build_material_pnft.rs  consume_build_material_spl.rs  consume_ingredient_pnft.rs  consume_ingredient_spl.rs  create_build_permit.rs  create_component_v1.rs  create_deterministic_ingredient.rs  create_item_class_v1.rs  create_pack.rs  create_recipe.rs  create_schema_v1.rs  destroy_ingredient_pnft.rs  destroy_ingredient_spl.rs  end_build.rs  mod.rs  receive_item.rs  receive_item_pnft.rs  receive_item_spl.rs  return_build_material.rs  return_build_material_pnft.rs  return_build_material_spl.rs  return_ingredient_pnft.rs  (+7 more)
rust/item/src/state/: accounts.rs  errors.rs  mod.rs
rust/itemv2/: Cargo.toml
rust/itemv2/src/: lib.rs
rust/itemv2/src/instructions/: add_ingredient_pnft.rs  add_ingredient_spl.rs  add_item_to_item_class.rs  apply_build_effect.rs  close_build.rs  complete_build.rs  complete_build_item.rs  complete_build_pack.rs  complete_build_preset_only.rs  create_build_permit.rs  create_deterministic_ingredient.rs  create_item_class.rs  create_pack.rs  create_recipe.rs  destroy_ingredient_pnft.rs  destroy_ingredient_spl.rs  escrow_payment.rs  migrate_build_account.rs  migrate_item_class_account.rs  mint_authority_tokens.rs  mod.rs  receive_item_pnft.rs  receive_item_spl.rs  release_from_escrow_pnft.rs  release_from_escrow_spl.rs  return_ingredient_pnft.rs  return_ingredient_spl.rs  start_build.rs  transfer_payment.rs  verify_ingredient.rs  verify_ingredient_merkle_tree_test.rs  verify_ingredient_test.rs
rust/itemv2/src/state/: accounts.rs  errors.rs  mod.rs
rust/matches/: Cargo.toml
rust/matches-cpi/: Cargo.toml  matches.json
rust/matches/src/: lib.rs  utils.rs
rust/namespace/: Cargo.toml
rust/namespace-cpi/: Cargo.toml  namespace.json
rust/namespace-cpi/src/: lib.rs
rust/namespace/src/: lib.rs  utils.rs
rust/player/: Cargo.toml
rust/player-cpi/: Cargo.toml  player.json
rust/staking/: Cargo.toml
rust/staking-cpi/: Cargo.toml  staking.json
rust/tests/: avatar.ts  item.ts  itemv1.ts  itemv2.ts  matches.ts  namespace.ts  player.ts  staking.ts
tests/: .eslintrc.json  .gitignore  jest.config.js  package.json  tsconfig.json
tests/devnet/: matches.ts  namespace.ts  player.ts  staking.ts  utils.ts
tests/src/: item-namespace-staking.test.ts  item.test.ts  staking.test.ts  test.test.ts
tests/system/: item-namespace-staking.test.ts  item-staking.test.ts
tests/test-helpers/: token.ts
tools/: create-mint-md-me.ts
tools/scripts/: create_idl_accounts.sh  setup_namespace.sh
(+144 files in other folders)
