[package]
name = "itemv2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "itemv2"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
mpl-token-metadata = { version="1.13.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = { version = "1.4.1", features = ["no-entrypoint"] }
#spl-account-compression = { git = "https://github.com/solana-labs/solana-program-library", package = "spl-account-compression", branch = "master", features = ["cpi"] }
#spl-noop = { git = "https://github.com/solana-labs/solana-program-library", package = "spl-noop", branch = "master", features = ["cpi"] }
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["cpi"] }