[package]
name = "itemv2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "itemv2"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["metadata"] }
mpl-token-metadata = { version="1.9.1", features = [ "no-entrypoint" ] }
spl-account-compression = { version  = "0.1.8", features = ["cpi"] }
spl-noop = { version = "0.1.3", features = ["cpi"] }
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }
