[package]
name = "raindrops-matches"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "raindrops_matches"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang ={ version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
arrayref = "0.3.6"
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
