[package]
name = "raindrops-namespace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "raindrops_namespace"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
arrayref = "0.3.6"
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
